fix : bad practices against postgres wiki (#1436)
* fix : bad practices against postgres wiki

* Update src/main/java/com/app/folioman/portfolio/domain/PortfolioValueUpdateService.java

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* implement review comment

* implements review comments

* Add Javadocs for portfolio transaction handling and test methods

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>