@@ -91,11 +91,12 @@ class CapitalGainsHarvestingServiceTest {
         };
     }
 
+    /** Creates a purchase transaction for harvesting scenarios. */
     private UserTransactionDetailsEntity createTxn(BigDecimal amount, Double units, Double nav, LocalDate date) {
         UserTransactionDetailsEntity txn = new UserTransactionDetailsEntity();
         txn.setAmount(amount);
-        txn.setUnits(units);
-        txn.setNav(nav);
+        txn.setUnits(BigDecimal.valueOf(units));
+        txn.setNav(BigDecimal.valueOf(nav));
         txn.setTransactionDate(date);
         txn.setType(TransactionType.PURCHASE_SIP);
 
@@ -129,8 +130,9 @@ class CapitalGainsHarvestingServiceTest {
                 return null;
             }
 
+            /** Returns the mocked scheme type. */
             @Override
-            public @Nullable MFSchemeTypeProjection getMfSchemeTypeEntity() {
+            public MFSchemeTypeProjection getMfSchemeTypeEntity() {
                 return typeProj;
             }
 
@@ -159,6 +161,7 @@ class CapitalGainsHarvestingServiceTest {
         assertThat(response.recommendations()).isEmpty();
     }
 
+    /** Verifies that available long-term gains use the exemption before incurring tax. */
     @Test
     void shouldPrioritizeLtcgExemptionFirst() {
         String pan = "ABCDE1234F";
@@ -188,11 +191,12 @@ class CapitalGainsHarvestingServiceTest {
         CapitalGainsHarvestingResponse response = service.generateHarvestingPlan(request);
 
         assertThat(response.recommendations()).hasSize(1);
-        var rec = response.recommendations().get(0);
+        var rec = response.recommendations().getFirst();
         // Exemption covers 1L, since profit is 40k, estimated tax is 0.
         assertThat(rec.estimatedTax()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
+    /** Verifies short-term gains tax and exit-load calculations. */
     @Test
     void shouldCalculateStcgAndExitLoad() {
         String pan = "ABCDE1234F";
@@ -221,7 +225,7 @@ class CapitalGainsHarvestingServiceTest {
         CapitalGainsHarvestingResponse response = service.generateHarvestingPlan(request);
 
         assertThat(response.recommendations()).hasSize(1);
-        var rec = response.recommendations().get(0);
+        var rec = response.recommendations().getFirst();
 
         // 40k profit STCG -> 15% tax = 6k
         assertThat(rec.stcg()).isEqualByComparingTo(new BigDecimal("40000"));
@@ -230,6 +234,7 @@ class CapitalGainsHarvestingServiceTest {
         assertThat(rec.exitLoad()).isEqualByComparingTo(new BigDecimal("500.00"));
     }
 
+    /** Verifies that harvesting is capped at the available holding value. */
     @Test
     void shouldHarvestAvailableWhenTargetAmountExceedsAvailable() {
         String pan = "ABCDE1234F";
@@ -268,7 +273,7 @@ class CapitalGainsHarvestingServiceTest {
         CapitalGainsHarvestingResponse response = service.generateHarvestingPlan(request);
 
         assertThat(response.recommendations()).hasSize(1);
-        var rec = response.recommendations().get(0);
+        var rec = response.recommendations().getFirst();
         assertThat(rec.redemptionAmount()).isEqualByComparingTo(new BigDecimal("50000.00"));
     }
 }
